<resources>
    <string name="app_name">IBM2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_front__screen">Front_Screen</string>
    <string name="write_here">Write here...</string>
    <string name="analyze">Analyze</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="blog">Blog</string>
    <string name="article">Article</string>
    <string name="code">Code</string>
</resources>
